<?xml version="1.0"?>
<package>
  <name>rosjava_bootstrap</name>
  <version>0.3.2</version>
  <description>
    Bootstrap utilities for rosjava builds.
  </description>
  <url>http://ros.org/wiki/rosjava_bootstrap</url>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <author>Daniel Stonier</author>
  <author>Damon Kohler</author>
  <license>Apache 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosjava_build_tools</build_depend>
  <run_depend>rosjava_build_tools</run_depend>
</package>

